Kubernetes/Ingress/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /post/?(.*)
            backend:
              serviceName: posts
              servicePort: 5001
          - path: /comment/?(.*)
            backend:
              serviceName: comments-service
              servicePort: 5002
          - path: /query/?(.*)
            backend:
              serviceName: print-query-service
              servicePort: 5003
          - path: /
            backend:
              serviceName: client-service
              servicePort: 4200
